; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/libiberty/extr_cp-demangle.c_cplus_demangle_print_callback.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/libiberty/extr_cp-demangle.c_cplus_demangle_print_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demangle_component = type { i32 }
%struct.d_print_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cplus_demangle_print_callback(i32 %0, %struct.demangle_component* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.demangle_component*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.d_print_info, align 4
  store i32 %0, i32* %5, align 4
  store %struct.demangle_component* %1, %struct.demangle_component** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @d_print_init(%struct.d_print_info* %9, i32 %10, i32 %11, i8* %12)
  %14 = load %struct.demangle_component*, %struct.demangle_component** %6, align 8
  %15 = call i32 @d_print_comp(%struct.d_print_info* %9, %struct.demangle_component* %14)
  %16 = call i32 @d_print_flush(%struct.d_print_info* %9)
  %17 = call i32 @d_print_saw_error(%struct.d_print_info* %9)
  %18 = icmp ne i32 %17, 0
  %19 = xor i1 %18, true
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i32 @d_print_init(%struct.d_print_info*, i32, i32, i8*) #1

declare dso_local i32 @d_print_comp(%struct.d_print_info*, %struct.demangle_component*) #1

declare dso_local i32 @d_print_flush(%struct.d_print_info*) #1

declare dso_local i32 @d_print_saw_error(%struct.d_print_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
